# how-to-look-at-data

./: .gitignore  1. Cluster Conversations.ipynb  2. Better Summaries.ipynb  3. Classifiers.ipynb  PRECOMMIT_HOOK.md  README.md  app.py  convert.py  pyproject.toml  watch_notebooks.py
lib/: conversation.py
md/: 1. Cluster Conversations.md  2. Better Summaries.md  3. Classifiers.md
slidev/: package-lock.json  package.json  part1_jeff.md  part2_jason.md  slides.md
